# icml26-repro-ra2t1V4nml-mira-score

./: .gitattributes  .gitignore  README.md  STATUS.md  poster_embed.html  pyproject.toml
.openresearch/artifacts/: campaign_verdicts.json
.trackio/: metadata.json
.trackio/logbook/: index.html  logbook.json
docs/: arxiv_source.tar  source_pins.json
notebooks/: mira_reproduction.py
outputs/: PUBLICATION_GATE_PASSED.json  bayes_factor_audit.json  claim_verification.json  claims_1_2.json  evidence_bundle.json  full_gmm_aggregate.json  gmm_smoke.json  reproduction_bundle_manifest.json  source_audit.json  test_results.json
release/: judged_space_manifest.json  live_head_subset_check.json  publication_approval.json  publication_receipt.json  publish_text_allowlist.py  release_gate.json  subset_check.json  text_upload_allowlist.txt  text_upload_manifest.json
release/space_candidate/: README.md  logbook.json
reports/mira-reproduction/: report.md
repro/configs/: full_gmm.json
repro/src/: aggregate_full_gmm.py  audit_sources.py  bayes_factor_audit.py  build_evidence_bundle.py  build_reproduction_bundle.py  check_claim4_independent.py  check_claim5_independent.py  check_claim6_independent.py  claim4_lower_bound.py  claim5_lensing.py  claim5_mala_reconstruction.py  claim5_release_audit.py  claim6_galaxy_images.py  gmm_full_protocol.py  log_bundle_artifact.py  null_law.py  run_campaign.py  run_tests.py  verify_campaign.py  verify_claim4.py  verify_claim5.py  verify_claim5_profile.py  verify_claim6.py  verify_claims.py  verify_claims_1_2.py  (+1 more)
(+69 files in other folders)
