[project]
name = "mira-reproduction"
version = "0.1.0"
description = "Claim-by-claim reproduction of MIRA"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mira-score",
    "numpy>=2.0,<3",
    "scipy>=1.13,<2",
    "torch>=2.3,<3",
    "tqdm>=4.66,<5",
]

[dependency-groups]
dev = [
    "marimo>=0.17,<1",
    "pytest>=8,<10",
]

[tool.uv]
package = false

[tool.uv.sources]
mira-score = { path = "upstream", editable = true }
